幅、サイズなどの調整

--- a/hello/index3.html
+++ b/hello/index3.html
@@ -6,7 +6,7 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <h1><div class="a">3のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="完了"><br><br>
+        <h1><div class="a">3のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="完了">　　　<input type="button" class="purplebutton" onclick="saveData3()" value="保存"><br><br>
         <input id="dataInput3_3" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
         <textarea id="dataInput3" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData3()" value="保存"></div>
