--- a/hello/index.html
+++ b/hello/index.html
@@ -12,9 +12,9 @@
             <h1><span style="font-size: 25pt;" class="b">場所を選ぶ：</span></h1>
         <div class="i">
         <input type="button" id="dataInput1_1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
-        <input type="button" id="dataInput2_2" class="greenbutton" onclick="location.href='index2_2.html'" value="2のスペース"><br><br>
-        <input type="button" id="dataInput3_3" class="greenbutton" onclick="location.href='index3_3.html'" value="3のスペース"><br><br>
-        <input type="button" id="dataInput4_4" class="greenbutton" onclick="location.href='index4_4.html'" value="4のスペース"><br><br>
+        <input type="button" id="dataInput2_2" class="greenbutton" onclick="location.href='index2_2.html'" placeholder="2のスペース"><br><br>
+        <input type="button" id="dataInput3_3" class="greenbutton" onclick="location.href='index3_3.html'" placeholder="3のスペース"><br><br>
+        <input type="button" id="dataInput4_4" class="greenbutton" onclick="location.href='index4_4.html'" placeholder="4のスペース"><br><br>
         </div>
     </body>
 </html>
