--- a/hello/index1_1.html
+++ b/hello/index1_1.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="編集"><br><br><br>
-        <div class="t">
+        <div class="t"><br>
             <div class="i">
                 <span id="savedData1_1"></span>
-            </div>
+            </div><br>
         </div><br>
         <div class="m"><br>
             <div class="i">
