テキストボックスの大きさを変更

--- a/hello/index2.html
+++ b/hello/index2.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1><div class="a">2のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index2_2.html'" value="完了">　　　<input type="button" class="purplebutton" onclick="saveData2()" value="保存"><br><br>
-        <input id="dataInput2_2" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
-        <textarea id="dataInput2" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br><br>
+        <input id="dataInput2_2" class="title" placeholder="タイトル"><br><br>
+        <textarea id="dataInput2" class="textarea" placeholder="メモを入力"></textarea><br><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData2()" value="保存"></div>
 
         <script>
