タイトルラベル2

--- a/hello/index.html
+++ b/hello/index.html
@@ -11,10 +11,10 @@
         </header>
             <h1><span style="font-size: 25pt;" class="b">場所を選ぶ：</span></h1>
         <div class="i">
-        <label for="dataInput1_1">1　　</label><input type="button" id="dataInput1_1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
-        <label for="dataInput2_2">2　　</label><input type="button" id="dataInput2_2" class="greenbutton" onclick="location.href='index2_2.html'" placeholder="2のスペース"><br><br>
-        <label for="dataInput3_3">3　　</label><input type="button" id="dataInput3_3" class="greenbutton" onclick="location.href='index3_3.html'" placeholder="3のスペース"><br><br>
-        <label for="dataInput4_4">4　　</label><input type="button" id="dataInput4_4" class="greenbutton" onclick="location.href='index4_4.html'" placeholder="4のスペース"><br><br>
+        <label for="dataInput1_1"><div class="l">1</div>　　</label><input type="button" id="dataInput1_1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
+        <label for="dataInput2_2"><div class="l">2</div>　　</label><input type="button" id="dataInput2_2" class="greenbutton" onclick="location.href='index2_2.html'" placeholder="2のスペース"><br><br>
+        <label for="dataInput3_3"><div class="l">3</div>　　</label><input type="button" id="dataInput3_3" class="greenbutton" onclick="location.href='index3_3.html'" placeholder="3のスペース"><br><br>
+        <label for="dataInput4_4"><div class="l">4</div>　　</label><input type="button" id="dataInput4_4" class="greenbutton" onclick="location.href='index4_4.html'" placeholder="4のスペース"><br><br>
         </div>
     </body>
 </html>
